--- a/index.html
+++ b/index.html
@@ -25,7 +25,33 @@
             <!-- List of links-->
             <ul>
                 <li>
-                    <a href="#">About us</a>
+                    <a href="#">About us</a> 
+                </li>
+                <li>
+                    <a href="#">Support</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    <a href="#">Press</a>
+                </li>
+                <li>
+                    <a href="#">Api</a>
+                </li>
+                <li>
+                    <a href="#">Jobs</a>
+                </li>
+                <li>
+                    <a href="#">Privacy</a>
+                <li>
+                    <a href="#">Terms</a>
+                </li>
+                <li>
+                    <a href="#">Directory</a>
+                </li>
+                <li>
+                     <a href="#">Language</a>
                 </li>
             </ul>
         </nav>
