--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 </li>
                 <li>
                     <a href="#">Privacy</a>
+                </li>
                 <li>
                     <a href="#">Terms</a>
                 </li>
@@ -55,6 +56,7 @@
                 </li>
             </ul>
         </nav>
+        <span>© 2018 jasminepro</span>
     </footer>
 </body>
 </html>
