--- a/index.html
+++ b/index.html
@@ -11,52 +11,62 @@
     <main>
         <!--phone image-->
         <div>
-
+            <img src="images/phoneimage.png" alt="loading..." />
         </div>
         <!-- Login Boxes-->
         <div>
+            <div>
+                <img src="images/logo.png" alt="" />
 
+                <form action="feed.html">
+                        <input name="username" type="text" placeholder="username" required />
+                        <input name="password" type="password" placeholder="password" required />
+                        <input type="submit" value="Log In">
+                </form>
+
+                <a target="_blank" href="https://www.facebook.com/login.php?skip_api_login=1&api_key=124024574287414&signed_next=1&next=https%3A%2F%2Fwww.facebook.com%2Fv1.0%2Fdialog%2Foauth%3Fredirect_uri%3Dhttps%253A%252F%252Fwww.instagram.com%252Faccounts%252Fsignup%252F%26state%3D%257B%2522fbLoginKey%2522%253A%25221hdaqricgti7lfoyzpw1r1cynxru1a2q3g73s71t20w0r1d0mv04%2522%252C%2522fbLoginReturnURL%2522%253A%2522%252F%2522%257D%26scope%3Demail%26response_type%3Dcode%252Cgranted_scopes%26client_id%3D124024574287414%26ret%3Dlogin%26logger_id%3D4add4576-a723-9ef3-3aa4-83fb9d40e27a&cancel_url=https%3A%2F%2Fwww.instagram.com%2Faccounts%2Fsignup%2F%3Ferror%3Daccess_denied%26error_code%3D200%26error_description%3DPermissions%2Berror%26error_reason%3Duser_denied%26state%3D%257B%2522fbLoginKey%2522%253A%25221hdaqricgti7lfoyzpw1r1cynxru1a2q3g73s71t20w0r1d0mv04%2522%252C%2522fbLoginReturnURL%2522%253A%2522%252F%2522%257D%23_%3D_&display=page&locale=en_GB&logger_id=4add4576-a723-9ef3-3aa4-83fb9d40e27a">
+                    Facebook Login
+                </a>
+                <span>OR</span>
+               
+                 
+            </div>
+            <div>
+                <span>Don't have an account?</span>
+                <a href="#">Sign Up</a>
+            </div>
+            <div>
+                <span>Get the app.</span>
+                <div>
+                    <a target="_blank" href="https://itunes.apple.com/app/instagram/id389801252?mt=8">
+                        <img src="images/ios.png" alt="loading.." />
+                    </a>
+                    <a target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge">
+                        <img src="images/android.png" alt="loading.." />
+                    </a>
+                </div>
+            </div>
         </div>
     </main>
 
-    <footer>
-        <!--Navigation-->
-        <nav>
-            <!-- List of links-->
-            <ul>
-                <li>
-                    <a href="#">About us</a> 
-                </li>
-                <li>
-                    <a href="#">Support</a>
-                </li>
-                <li>
-                    <a href="#">Blog</a>
-                </li>
-                <li>
-                    <a href="#">Press</a>
-                </li>
-                <li>
-                    <a href="#">Api</a>
-                </li>
-                <li>
-                    <a href="#">Jobs</a>
-                </li>
-                <li>
-                    <a href="#">Privacy</a>
-                </li>
-                <li>
-                    <a href="#">Terms</a>
-                </li>
-                <li>
-                    <a href="#">Directory</a>
-                </li>
-                <li>
-                     <a href="#">Language</a>
-                </li>
-            </ul>
-        </nav>
-        <span>© 2018 jasminepro</span>
-    </footer>
+<!-- This is simple way to make test 1 : Footer>(nav>ul>li*9[a href="#"])+span{@ 2018 jasminepro}   -->
+<footer>
+    <nav>
+        <ul>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">Api</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Directory</a></li>
+            <li><a href="#">Language</a></li>
+        </ul>
+    </nav>
+    <span>@ 2018 jasminepro</span>
+</footer>
+
 </body>
 </html>
