--- a/index.html
+++ b/index.html
@@ -51,19 +51,39 @@
     </main>
 
 <!-- This is simple way to make test 1 : Footer>(nav>ul>li*9[a href="#"])+span{@ 2018 jasminepro}   -->
-<footer>
-    <nav>
-        <ul>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Support</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Press</a></li>
-            <li><a href="#">Api</a></li>
-            <li><a href="#">Jobs</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Directory</a></li>
-            <li><a href="#">Language</a></li>
+<footer class="footer">
+    <nav class="footer__navigation">
+        <ul class="footer__list">
+            <li class="footer__list-item">
+                <a href="#">About us</a>
+            </li>
+            <li class="footer__list-item">
+                <a href="#" class="footer_link">Support</a>
+            </li>_
+            <li class="footer__list-item">
+                <a href="#"> class="footer_link"Blog</a>
+            </li>
+            <li class="footer__list-item">
+                <a href="#" class="footer_link">Press</a>
+            </li>
+            <li class="footer__list-item">
+                <a href="#" class="footer_link">Api</a>
+            </li>
+            <li class="footer__list-item">
+                <a href="#" class="footer_link">Jobs</a>
+            </li>
+            <li class="footer__list-item">
+                <a href="#" class="footer_link">Privacy</a>
+            </li>
+            <li class="footer__list-item">
+                <a href="#" class="footer_link">Terms</a>
+            </li>
+            <li class="footer__list-item">
+                <a href="#" class="footer_link">Directory</a>
+            </li>
+            <li class="footer__list-item">
+                <a href="#" class="footer_link">Language</a>
+            </li>
         </ul>
     </nav>
     <span>@ 2018 jasminepro</span>
