--- a/index.html
+++ b/index.html
@@ -9,42 +9,39 @@
 </head>
 <body>
     <!--These are columns-->
-    <main>
+    <main class="login">
         <!--phone image-->
-        <div>
+        <div class="login__column">
             <img src="images/phoneimage.png" alt="loading..." />
         </div>
         <!-- Login Boxes-->
-        <div>
-            <div>
-                <img src="images/logo.png" alt="" />
-
-                <form action="feed.html" method="post">
+        <div class="login__column">
+                <div class="login__white-box"></div>
+                    <img src="images/logo.png" class="login_lolo" alt="" />
+                    <form action="feed.html" method="post" class="login__form">
                         <input name="username" type="text" placeholder="username" required />
                         <input name="password" type="password" placeholder="password" required />
                         <input type="submit" value="Log In">
-                </form>
-                <span>OR</span>
-                <a href="#"></a>
-                    <i class="fa fa-facebook-square" aria-hidden="true"></i>"
-                    login with Facebook
-                </a>
-                <a  href="#" Forgot a password</a>
-            
-            </div>
-            <div>
-                <span>Don't have an account?</span>
-                <a href="#">Sign Up</a>
-            </div>
-            <div>
-                <span>Get the app.</span>
-                <div>
-                    <a target="_blank" href="https://itunes.apple.com/app/instagram/id389801252?mt=8">
-                        <img src="images/ios.png" alt="loading.." />
-                    </a>
-                    <a target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge">
-                        <img src="images/android.png" alt="loading.." />
-                    </a>
+                    </form>
+                    <span>OR</span>
+                    <a href="#" class="login__link"></a>
+                        <i class="fa fa-facebook-square" aria-hidden="true"></i>"login with Facebook</a>
+                    <a  href="#" class="login__link login__small-link">Forgot a password</a>
+                </div>
+                <div class="login__white-box">
+                    <span>Don't have an account?</span>
+                    <a href="#">Sign Up</a>
+                </div>
+                <div class="login__box">
+                    <span>Get the app.</span>
+                    <div> class="login__app-stores"
+                        <a class="login__app-store" target="_blank" href="https://itunes.apple.com/app/instagram/id389801252?mt=8">
+                            <img src="images/ios.png" alt="loading.." />
+                        </a>
+                        <a class="login__app-store" target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge">
+                            <img src="images/android.png" alt="loading.." />
+                        </a>
+                    </div>    
                 </div>
             </div>
         </div>
