--- a/index.html
+++ b/index.html
@@ -16,36 +16,36 @@
         </div>
         <!-- Login Boxes-->
         <div class="login__column">
-                <div class="login__white-box"></div>
-                    <img src="images/logo.png" class="login_lolo" alt="" />
-                    <form action="feed.html" method="post" class="login__form">
-                        <input name="username" type="text" placeholder="username" required />
-                        <input name="password" type="password" placeholder="password" required />
-                        <input type="submit" value="Log In">
-                    </form>
-                    <span>OR</span>
-                    <a href="#" class="login__link"></a>
-                        <i class="fa fa-facebook-square" aria-hidden="true"></i>"login with Facebook</a>
-                    <a  href="#" class="login__link login__small-link">Forgot a password</a>
-                </div>
-                <div class="login__white-box">
-                    <span>Don't have an account?</span>
-                    <a href="#">Sign Up</a>
-                </div>
-                <div class="login__box">
-                    <span>Get the app.</span>
-                    <div> class="login__app-stores"
-                        <a class="login__app-store" target="_blank" href="https://itunes.apple.com/app/instagram/id389801252?mt=8">
-                            <img src="images/ios.png" alt="loading.." />
-                        </a>
-                        <a class="login__app-store" target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge">
-                            <img src="images/android.png" alt="loading.." />
-                        </a>
-                    </div>    
-                </div>
+            <div class="login__white-box"></div>
+                <img src="images/logo.png" class="login_lolo" alt="" />
+                <form action="feed.html" method="post" class="login__form">
+                    <input name="username" type="text" placeholder="username" required />
+                    <input name="password" type="password" placeholder="password" required />
+                    <input type="submit" value="Log In">
+                </form>
+                <p><span>OR</span></p>
+                <a href="#" class="login__link"></a>
+                    <i class="fa fa-facebook-square" aria-hidden="true"></i>login with Facebook</a>
+                <a  href="#" class="login__link login__small-link">Forgot a password</a>
+            </div>
+            <div class="login__white-box">
+                <span>Don't have an account?</span>
+                <a href="#">Sign Up</a>
+            </div>
+            <div class="login__box">
+                <span>Get the app.</span>
+                <div class="login__app-stores">
+                    <a class="login__app-store" target="_blank" href="https://itunes.apple.com/app/instagram/id389801252?mt=8">
+                        <img src="images/ios.png" alt="loading.." />
+                    </a>
+                    <a class="login__app-store" target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge">
+                        <img src="images/android.png" alt="loading.." />
+                    </a>
+                </div>    
             </div>
         </div>
     </main>
+</body>
 
 <!-- This is simple way to make test 1 : Footer>(nav>ul>li*9[a href="#"])+span{@ 2018 jasminepro}   -->
 <footer class="footer">
@@ -56,9 +56,9 @@
             </li>
             <li class="footer__list-item">
                 <a href="#" class="footer_link">Support</a>
-            </li>_
+            </li>
             <li class="footer__list-item">
-                <a href="#"> class="footer_link"Blog</a>
+                <a href="#" class="footer_link">Blog</a>
             </li>
             <li class="footer__list-item">
                 <a href="#" class="footer_link">Press</a>
