--- a/feed.html
+++ b/feed.html
@@ -42,9 +42,9 @@
                 </li>
                 <li class="footer__list-item">
                     <a href="#" class="footer_link">Support</a>
-                </li>_
+                </li>
                 <li class="footer__list-item">
-                    <a href="#"> class="footer_link"Blog</a>
+                    <a href="#" class="footer_link">Blog</a>
                 </li>
                 <li class="footer__list-item">
                     <a href="#" class="footer_link">Press</a>
