--- a/explore.html
+++ b/explore.html
@@ -1,40 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>explore | Jasminepro </title>
 </head>
+
 <body>
     <header class="header">
-        <a href="feed.html">
-          <img src="images/insta.png" class="header__link" alt="" />
-        </a>
-        
-        <input name="username" type="text" placeholder="Search" class="header__input" required />
-        <ul class="header__icon-list">
-            <li class="header__icon">
-                <a href="explore.html" class="header__icon-link">
-                    <i class="fa fa-compass" aria-hidden="true"></i>
-                </a>
-            <li class="header__icon">
-                <a href="#" class="header__icon-link"> 
-                    <i class="fa fa-heart" aria-hidden="true"></i>
-                </a>
-            </li>
-            <li class="header__icon">
-                <a href="profile.html" class="header__icon-link">
-                    <i class="fa fa-user-o" aria-hidden="true"></i>
+        <div class="header__wrapper">
+            <a href="feed.html">
+                <img src="images/insta.png" class="header__link" alt="" />
             </a>
+
+            <input name="username" type="text" placeholder="Search" class="header__input" required />
+            <ul class="header__icon-list">
+                <li class="header__icon">
+                    <a href="explore.html" class="header__icon-link">
+                        <i class="fa fa-compass" aria-hidden="true"></i>
+                    </a>
+                    <li class="header__icon">
+                        <a href="#" class="header__icon-link">
+                            <i class="fa fa-heart" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="header__icon">
+                        <a href="profile.html" class="header__icon-link">
+                            <i class="fa fa-user-o" aria-hidden="true"></i>
+                        </a>
+                    </li>
+            </ul>
+        </div>
+    </header>
+    <main class="explore">
+        <span class="suggest">suggested</span>
+        <ul class="explore__user-lists">
+            <li class="explore__user">
+                <div class="explore__userinfo">
+                    <img src="images/userphoto.png" class="explore__userinfo-photo" />
+                    <div class="explore__userinfo-detail">
+                        <span class="explore__userinfo-id">victoria</span>
+                        <span class="explore__userinfo-name">Victoria Beckham.</span>
+                    </div>
+                </div>
+                <div class="expore__follow">
+                    <button class="explore__follow-button">Follow</button>
+                </div>
             </li>
         </ul>
-    </header>
-    <main></main>
-        
-<!-- This is simple way to make : Footer>(nav>ul>li*9[a href="#"])+span{@ 2018 jasminepro}   -->
-<footer class="footer">
+    </main>
+
+    <!-- This is simple way to make : Footer>(nav>ul>li*9[a href="#"])+span{@ 2018 jasminepro}   -->
+    <footer class="footer">
         <nav class="footer__navigation">
             <ul class="footer__list">
                 <li class="footer__list-item">
@@ -73,4 +94,5 @@
     </footer>
 
 </body>
+
 </html>
