--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Log in | Jasminepro </title>
+
 </head>
+
 <body>
     <!--These are columns-->
     <main class="login">
@@ -17,32 +21,35 @@
         <!-- Login Boxes-->
         <div class="login__column">
             <div class="login__white-box"></div>
-                <img src="images/logo.png" class="login_lolo" alt="" />
-                <form action="feed.html" method="post" class="login__form">
-                    <input name="username" type="text" placeholder="username" required />
-                    <input name="password" type="password" placeholder="password" required />
-                    <input type="submit" value="Log In">
-                </form>
-                <p><span>OR</span></p>
-                <a href="#" class="login__link"></a>
-                    <i class="fa fa-facebook-square" aria-hidden="true"></i>login with Facebook</a>
-                <a  href="#" class="login__link login__small-link">Forgot a password</a>
+            <img src="images/logo.png" class="login_lolo" alt="" />
+            <form action="feed.html" method="post" class="login__form">
+                <input name="username" type="text" placeholder="username" required />
+                <input name="password" type="password" placeholder="password" required />
+                <input type="submit" value="Log In">
+            </form>
+            <p>
+                <span>OR</span>
+            </p>
+            <a href="#" class="login__link"></a>
+            <i class="fa fa-facebook-square" aria-hidden="true"></i>login with Facebook</a>
+            <a href="#" class="login__link login__small-link">Forgot a password</a>
+
+        </div>
+        <div class="login__white-box">
+            <span>Don't have an account?</span>
+            <a href="#">Sign Up</a>
+        </div>
+        <div class="login__box">
+            <span>Get the app.</span>
+            <div class="login__app-stores">
+                <a class="login__app-store" target="_blank" href="https://itunes.apple.com/app/instagram/id389801252?mt=8">
+                    <img src="images/ios.png" alt="loading.." />
+                </a>
+                <a class="login__app-store" target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge">
+                    <img src="images/android.png" alt="loading.." />
+                </a>
             </div>
-            <div class="login__white-box">
-                <span>Don't have an account?</span>
-                <a href="#">Sign Up</a>
-            </div>
-            <div class="login__box">
-                <span>Get the app.</span>
-                <div class="login__app-stores">
-                    <a class="login__app-store" target="_blank" href="https://itunes.apple.com/app/instagram/id389801252?mt=8">
-                        <img src="images/ios.png" alt="loading.." />
-                    </a>
-                    <a class="login__app-store" target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge">
-                        <img src="images/android.png" alt="loading.." />
-                    </a>
-                </div>    
-            </div>
+        </div>
         </div>
     </main>
 </body>
@@ -52,7 +59,7 @@
     <nav class="footer__navigation">
         <ul class="footer__list">
             <li class="footer__list-item">
-                <a href="#">About us</a>
+                <a href="#" class="footer_link">About us</a>
             </li>
             <li class="footer__list-item">
                 <a href="#" class="footer_link">Support</a>
@@ -87,4 +94,5 @@
 </footer>
 
 </body>
+
 </html>
