--- a/profile.html
+++ b/profile.html
@@ -1,54 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Profile | Jasminepro </title>
 </head>
+
 <body>
-    <head>
-        <a href="feed.html">
-          <img src="images/insta.png" alt="" />
-        </a>
-        <input name="username" type="text" placeholder="Search" required />
-        <ul>
-            <li>
-                <a href="explore.html">
-                    <i class="fa fa-compass" aria-hidden="true"></i>
-                </a>
-            <li>
-                <a href="#"> 
-                    <i class="fa fa-heart" aria-hidden="true"></i>
-                </a>
-            </li>
-            <li><a href="profile.html">
-                <i class="fa fa-user-o" aria-hidden="true"></i>
+    <header class="header">
+        <div class="header__wrapper">
+            <a href="feed.html">
+                <img src="images/insta.png" class="header__link" alt="" />
             </a>
-            </li>
-        </ul>
-    </head>
+
+            <input name="username" type="text" placeholder="Search" class="header__input" required />
+            <ul class="header__icon-list">
+                <li class="header__icon">
+                    <a href="explore.html" class="header__icon-link">
+                        <i class="fa fa-compass" aria-hidden="true"></i>
+                    </a>
+                    <li class="header__icon">
+                        <a href="#" class="header__icon-link">
+                            <i class="fa fa-heart" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="header__icon">
+                        <a href="profile.html" class="header__icon-link">
+                            <i class="fa fa-user-o" aria-hidden="true"></i>
+                        </a>
+                    </li>
+            </ul>
+        </div>
+    </header>
     <main></main>
-        
-<!-- This is simple way to make : Footer>(nav>ul>li*9[a href="#"])+span{@ 2018 jasminepro}   -->
-<footer>
-    <nav>
-        <ul>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Support</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Press</a></li>
-            <li><a href="#">Api</a></li>
-            <li><a href="#">Jobs</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Directory</a></li>
-            <li><a href="#">Language</a></li>
-        </ul>
-    </nav>
-    <span>@ 2018 jasminepro</span>
-</footer>
+
+    <!-- This is simple way to make : Footer>(nav>ul>li*9[a href="#"])+span{@ 2018 jasminepro}   -->
+    <footer class="footer">
+        <nav class="footer__navigation">
+            <ul class="footer__list">
+                <li class="footer__list-item">
+                    <a href="#">About us</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer_link">Support</a>
+                </li>_
+                <li class="footer__list-item">
+                    <a href="#"> class="footer_link"Blog</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer_link">Press</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer_link">Api</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer_link">Jobs</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer_link">Privacy</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer_link">Terms</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer_link">Directory</a>
+                </li>
+                <li class="footer__list-item">
+                    <a href="#" class="footer_link">Language</a>
+                </li>
+            </ul>
+        </nav>
+        <span>@ 2018 jasminepro</span>
+    </footer>
 
 </body>
+
 </html>
