--- a/index_test.html
+++ b/index_test.html
@@ -21,17 +21,16 @@
         <!-- Login Boxes-->
         <div class="login__column">
             <div class="login__white-box">
-                <img src="images/logo.png" class="login__logo" alt="" />
+                <img src="images/logo.png" class="login_lolo" alt="" />
                 <form action="feed.html" method="post" class="login__form">
                     <input class="login__input" name="username" type="text" placeholder="username" required />
                     <input class="login__input" name="password" type="password" placeholder="password" required />
-                    <input class="login__input" type="submit" value="Log In">
+                    <input class="login__input login__button" type="submit" value="Log In">
                 </form>
                 <span>OR</span>
-
-                <a href="#" class="login__link">
-                    <i class="fa fa-facebook-square" aria-hidden="true"></i> Login with Facebook</a>
-                <a href="#" class="login__link login__small-link">Forgot a password?</a>
+                <a href="#" class="login__link"></a>
+                <i class="fa fa-facebook-square" aria-hidden="true"></i>login with Facebook</a>
+                <a href="#" class="login__link login__small-link">Forgot a password</a>
             </div>
             <div class="login__white-box">
                 <span>Don't have an account?</span>
@@ -48,8 +47,6 @@
                     </a>
                 </div>
             </div>
-        </div>
-
         </div>
     </main>
 </body>
