--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="login">
         <!--phone image-->
         <div class="login__column">
-            <img src="images/phoneimage.png" alt="loading..." />
+            <img src="images/phoneImage.png" alt="loading..." />
         </div>
         <!-- Login Boxes-->
         <div class="login__column">
