--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="login__column">
             <div class="login__white-box">
                 <img src="images/logo.png" class="login__logo" alt="" />
-                <form action="feed.html" method="post" class="login__form">
+                <form action="feed.html" method="get" class="login__form">
                     <input class="login__input" name="username" type="text" placeholder="username" required />
                     <input class="login__input" name="password" type="password" placeholder="password" required />
                     <input class="login__input" type="submit" value="Log In">
